# Serial

./: README.md
CppLinuxSerial/: CMakeLists.txt
CppLinuxSerial/src/: CMakeLists.txt
Serial/: CMakeLists.txt
test/: CMakeLists.txt
test/Serial/: CMakeLists.txt
test/Serial/include/Serial/: CRC.h  Serial_Analysis.h
test/Serial/src/: CRC.cpp  Serial_Analysis.cpp
test/app/: CMakeLists.txt  main.cpp
